# mirror_r-type

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  COMPARATIVE_STUDY.md  Makefile  Message.cpp  Message.hpp  PROTOCOL_RCF.md  README-cross-compile-windows-from-ubuntu_Version.md  README.md  SDL2_INSTALLATION.md  docker-compose.yml  prometheus.yml  rtype.db
.github/workflows/: r-type.yml
Docker/: .dockerignore  Dockerfile.client  Dockerfile.server  README.md  docker-compose.yml
client/: CMakeLists.txt  Makefile
client/include/prediction/: GamePrediction.hpp  InputHistory.hpp
client/res/config/: keybindings.ini
client/res/sounds/: README.md  placeholder.txt
client/res/sprites/ParallaxBackground/: README.txt
client/src/: GraphicsManager.cpp  Main.cpp  main.cpp
client/src/ecs/: Components.hpp  Entity.cpp  Hitbox.cpp  Registry.cpp  Registry.hpp  Registry.tpp  SparseArray.hpp
client/src/ecs/components/: AllComponents.hpp  AttackFlash.hpp  Components.hpp  Eye.hpp  Hitbox.hpp  Jump.hpp  OwnerId.hpp  ParallaxState.hpp  Platform.hpp  Player.hpp  PlayerSyncState.hpp  Sound.hpp  Sprite.hpp  SpriteFactory.cpp  SpriteFactory.hpp  SpriteManager.cpp  SpriteManager.hpp  SpriteUtils.cpp  SpriteUtils.hpp  Tags.hpp  TextBox.hpp  Vector2.hpp  Weight.hpp
client/src/ecs/components/componentutils/: HitboxUtils.hpp
client/src/ecs/systems/: BossAttackTriggerSystem.cpp  BossAttackTriggerSystem.hpp  ButtonInfoSystem.cpp  ButtonInfoSystem.hpp  ButtonSystem.cpp  ButtonSystem.hpp  CollisionPlayerProjectileSystem.hpp  CollisionSystem.cpp  CollisionSystem.hpp  EyeSystem.cpp  EyeSystem.hpp  GravitySystem.cpp  GravitySystem.hpp  HitEffectSystem.cpp  HitEffectSystem.hpp  MovementSystem.cpp  MovementSystem.hpp  ParallaxBackgroundSystem.cpp  ParallaxBackgroundSystem.hpp  PlayerListRenderSystem.cpp  PlayerListRenderSystem.hpp  ProjectileSystem.cpp  ProjectileSystem.hpp  RenderSystem.cpp  RenderSystem.hpp  SoundSystem.cpp  SoundSystem.hpp  SpriteAnimationSystem.cpp  SpriteAnimationSystem.hpp  TextBoxInputSystem.cpp  TextBoxInputSystem.hpp  TextBoxRenderSystem.cpp  TextBoxRenderSystem.hpp  WeaponRotationSystem.cpp  WeaponRotationSystem.hpp
client/src/entities/Sprite/: CreateAnimateSprite.cpp  CreateAnimateSprite.hpp
client/src/entities/button/: CreateButton.cpp  CreateButton.hpp  CreateButtonInfo.cpp  CreateButtonInfo.hpp
client/src/entities/enemies/: enemyMovement.cpp  enemyMovement.hpp
client/src/entities/eyes/: CreateEye.cpp  CreateEye.hpp
client/src/entities/platform/: CreatePlatform.cpp  CreatePlatform.hpp
client/src/entities/player/: CreatePlayer.cpp  CreatePlayer.hpp  HandlePlayerInputs.cpp  HandlePlayerInputs.hpp
client/src/entities/projectile/: CreateProjectile.cpp  CreateProjectile.hpp
client/src/entities/textbox/: TextBox.cpp  TextBox.hpp  TextBoxInput.cpp  TextBoxInput.hpp
client/src/entities/weapons/: HandleWeaponInputs.cpp  HandleWeaponInputs.hpp
client/src/game_handler/: Game.cpp  Game.hpp  GameEntityDeserializer.cpp  GameInputHandler.cpp  GameMenuHandler.cpp  GameNetworkHandler.cpp  GamePrediction.cpp  GameTimer.cpp  GameTimer.hpp  GameUpdate.cpp  ProgramArguments.cpp  ProgramArguments.hpp
client/src/managers/: ConfigManager.cpp  ConfigManager.hpp  GraphicsManager.cpp  GraphicsManager.hpp  InputManager.cpp  InputManager.hpp  ResourceManager.cpp  ResourceManager.hpp  SoundManager.cpp  SoundManager.hpp  SpriteRegistry.cpp  SpriteRegistry.hpp
client/src/network/: HandleClientInputs.cpp  HandleConnectionRequests.cpp  HandleEntities.cpp  HandleKickPlayer.cpp  HandleLobbyRequests.cpp  HandleRollback.cpp  InitializeClientRequests.cpp  NetworkEventQueue.hpp  RTypeClient.cpp  RTypeClient.hpp
client/src/player/: CreatePlayer.cpp  CreatePlayer.hpp  HandlePlayerInputs.hpp
client/src/prediction/: InputHistory.cpp  InputHistory.hpp
client/src/projectile/: CreateProjectile.cpp  CreateProjectile.hpp
client/src/render/: ButtonRender.cpp  ButtonRender.hpp  EyeRender.cpp  EyeRender.hpp  PlatformRender.cpp  PlatformRender.hpp  ProjectileRender.cpp  ProjectileRender.hpp  SpriteRender.cpp  SpriteRender.hpp  TextBoxInputRender.cpp  TextBoxInputRender.hpp  TextBoxRender.cpp  TextBoxRender.hpp
client/src/ui/: BackgroundMenu.cpp  BackgroundMenu.hpp  Menu.cpp  Menu.hpp
client/src/ui/page/: AMenu.cpp  AMenu.hpp  ConnectionMenu.cpp  ConnectionMenu.hpp  EndMenu.cpp  EndMenu.hpp  HomeMenu.cpp  HomeMenu.hpp  JoinMenu.cpp  JoinMenu.hpp  LevelSelectedPage.hpp  LobbyMenu.cpp  LobbyMenu.hpp  LoginMenu.cpp  LoginMenu.hpp  ParameterMenu.cpp  ParameterMenu.hpp
monitoring/: Monitoring.md  docker-compose.yml
monitoring/grafana/grafana-data/: grafana.db
monitoring/prometheus/: prometheus.yml
server/: CMakeLists.txt  Makefile  Metrics.cpp
server/db/: DB.cpp  DB.hpp  PasswordManager.cpp  PasswordManager.hpp
server/include/: GameInstance.hpp  LobbyManager.hpp  RTypeServer.hpp  UdpSocket.hpp
server/metrics/: Metrics.cpp  Metrics.hpp
server/src/: GameInstance.cpp  HandleAuthRequest.cpp  HandleConnect.cpp  HandleCreateLobby.cpp  HandleDisconnect.cpp  HandleInput.cpp  HandleJoinLobby.cpp  HandleKickPlayer.cpp  HandleLobbyState.cpp  HandlePing.cpp  HandleStartGame.cpp  HandleUsernameRequest.cpp  LobbyManager.cpp  RTypeServer.cpp  main.cpp
shared/include/: ComponentMapper.hpp  Config.hpp  DisplayPresets.hpp  EntityData.hpp  EntityFactory.hpp  EntityMetadata.hpp  EntityMetadataRegistration.hpp  EntitySerializer.hpp  EntityType.hpp  EntityTypeDetector.hpp  GameInputs.hpp  GameInstance.hpp  GameNetworkingSocket.hpp  IpEncoding.hpp  Message.hpp  PlayerActions.hpp  PlayerMovementState.hpp  PropertySerializer.hpp  RTypeNetwork.hpp  UdpSocket.hpp
shared/include/game_instance/: GameInstanceConditions.hpp  GameInstanceCore.hpp  GameInstanceEntities.hpp  (+4 more)
shared/src/: ComponentMapper.cpp  EntityFactory.cpp  EntityMetadata.cpp  EntityMetadataRegistration.cpp  EntitySerializer.cpp  EntityType.cpp  EntityTypeDetector.cpp  GameInstance.cpp  GameNetworkingSocket.cpp  IpEncoding.cpp  Message.cpp  PlayerActions.cpp  PropertySerializer.cpp  RTypeNetwork.cpp  UdpSocket.cpp
(+119 files in other folders)
